# ClientSideEliteBridge

build-clientside_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja
build-clientside_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/clientside_ui_file_autogen/: deps  mocs_compilation.cpp
build-clientside_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/clientside_ui_file_autogen/EWIEGA46WW/: moc_clickable.cpp  moc_clickable.cpp.d  moc_clientwindow.cpp  moc_itembasket.cpp  moc_itembasket.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_restock.cpp  moc_restock.cpp.d  moc_restockbasket.cpp  moc_restockbasket.cpp.d  moc_withdraw.cpp  moc_withdraw.cpp.d
build-clientside_ui_file-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/clientside_ui_file_autogen/include/: ui_clientwindow.h  ui_itembasket.h  ui_mainwindow.h  ui_restock.h  ui_restockbasket.h  ui_withdraw.h
clientside_ui_file/: CMakeLists.txt  clientwindow.cpp
